--- a/sajt/registration.html
+++ b/sajt/registration.html
@@ -18,7 +18,7 @@
 			<div>Lozinka: <br/><input type="text" name="password_reg" align="right"></div>
 			<div>Ponovite lozinku: <br/><input type="text" name="password2_reg" align="right"></div>
 			<div>E-mail adresa: <br/><input type="text" name="email_reg" align="right"></div>
-			<div><button onclick="window.open ('index.html','_self',false);" type="button">Login</button></div>
+			<div><button onclick="window.open ('index.html','_self',false);" type="button">Registrovati se</button></div>
 			</form>
 		
 			
