--- a/sajt/search.html
+++ b/sajt/search.html
@@ -6,19 +6,15 @@
 	</head>
 	<body>
 		<div class="flex-container-header" height="50" width="100%">
-		<div align="left"><a href="index.html"><img src="neural_beats_small.png"></a></div>
+		<div align="left"><img src="neural_beats_small.png"></div>
 		<div><form><input type="text" name="query"><button onclick="window.open ('search.html','_self',false);" type="button">Search</button></form></div>
-		<div>Vi ste ulogovani kao <a href="#">Petar Petrovic</a>     <img src="placeholder.jpg" height="30">     <a href="index_guest.html">Izlogovati se</a></div>
+		<div>Vi ste ulogovani kao <a href="#">Petar Petrovic</a>     <img src="placeholder.jpg" height="30">     <a href="search_guest.html">Izlogovati se</a></div>
 		</div>
 
 		<div class="flex-container-main">
-			<div><font size="10">
-				<br/>
-				Neural Beats<br/>
-				</font>
-			</div>
-			<div><img src="neural beats.png"></div>
-			<div><a href="#">Otvoriti generator</a>
+			<div><a href="#">Neki trek 1</a> <br/> Opis treka</div>
+			<div><a href="#">Neki trek 2</a> <br/> Opis treka</div>
+			<div><a href="#">Neki trek 3</a> <br/> Opis treka</div>
 		</div>
 		
 			
