--- a/sajt/index_guest.html
+++ b/sajt/index_guest.html
@@ -7,7 +7,7 @@
 	<body>
 		<div class="flex-container-header" height="50" width="100%">
 		<div align="left"><a href="index_guest.html"><img src="neural_beats_small.png"></a></div>
-		<div><form><input type="text" name="query"><input type="submit" value="Search"></form></div>
+		<div><form><input type="text" name="query"><button onclick="window.open ('search_guest.html','_self',false);" type="button">Search</button></form></div>
 		<div>Dobrodošli na sajt Neural Beats.    <a href="registration.html">Registracija</a>         <form><input type="text" name="login"><input type="text" name="password"><button onclick="window.open ('index.html','_self',false);" type="button">Login</button></form></div>
 		</div>
 
