--- a/sajt/index.html
+++ b/sajt/index.html
@@ -18,7 +18,7 @@
 				</font>
 			</div>
 			<div><img src="neural beats.png"></div>
-			<div><a href="#">Otvoriti generator</a>
+			<div><a href="generation.html">Otvoriti generator</a>
 		</div>
 		
 			
