--- a/sajt/search.html
+++ b/sajt/search.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div class="flex-container-header" height="50" width="100%">
-		<div align="left"><img src="neural_beats_small.png"></div>
+		<div align="left"><a href="index.html"><img src="neural_beats_small.png"></a></div>
 		<div><form><input type="text" name="query"><button onclick="window.open ('search.html','_self',false);" type="button">Search</button></form></div>
 		<div>Vi ste ulogovani kao <a href="#">Petar Petrovic</a>     <img src="placeholder.jpg" height="30">     <a href="search_guest.html">Izlogovati se</a></div>
 		</div>
