--- a/sajt/generation.html
+++ b/sajt/generation.html
@@ -8,7 +8,7 @@
 		<div class="flex-container-header" height="50" width="100%">
 		<div align="left"><a href="index.html"><img src="neural_beats_small.png"></a></div>
 		<div><form><input type="text" name="query"><button onclick="window.open ('search.html','_self',false);" type="button">Search</button></form></div>
-		<div>Vi ste ulogovani kao <a href="#">Petar Petrovic</a>     <img src="placeholder.jpg" height="30">     <a href="index_guest.html">Izlogovati se</a></div>
+		<div>Vi ste ulogovani kao <a href="#">Petar Petrovic</a>     <img src="placeholder.jpg" height="30">     <a href="generation_guest.html">Izlogovati se</a></div>
 		</div>
 
 		<div class="flex-container-main">
@@ -161,6 +161,7 @@
 			</table>
 			
 			</div>
+			<div><button type="button">Randomize</button></form></div>
 			<div>Jacina:</div><div> <input type="range" min="1" max="100" value="50" class="slider" id="Volume"></div>
 			<div>Brzina:</div><div> <input type="range" min="1" max="100" value="50" class="slider" id="Speed"></div>
 			<div>Verovatnoca:</div><div> <input type="range" min="1" max="100" value="50" class="slider" id="Probability"></div>
