--- a/prototip 1.0/search_guest.html
+++ b/prototip 1.0/search_guest.html
@@ -1,5 +1,6 @@
 <html>
 	<!-- Marija Jovanovic-->
+	<!--proba edit-->
 	<head>
 		<title>Neural Beats</title>
 		<link rel="stylesheet" href="CSS1.css">
