--- a/sajt/generation_guest.html
+++ b/sajt/generation_guest.html
@@ -8,7 +8,7 @@
 		<div class="flex-container-header" height="50" width="100%">
 		<div align="left"><a href="index_guest.html"><img src="neural_beats_small.png"></a></div>
 		<div><form><input type="text" name="query"><button onclick="window.open ('search_guest.html','_self',false);" type="button">Search</button></form></div>
-		<div>Dobrodošli na sajt Neural Beats.    <a href="registration.html">Registracija</a>         <form><input type="text" name="login"><input type="text" name="password"><button onclick="window.open ('generation.html','_self',false);" type="button">Login</button></form></div>
+		<div>Dobrodošli na sajt Neural Beats.    <a href="registration.html">Registracija</a>         <form><input type="text" name="login"><input type="password" name="password"><button onclick="window.open ('generation.html','_self',false);" type="button">Login</button></form></div>
 		</div>
 
 		<div class="flex-container-main">
