--- a/sajt/search_guest.html
+++ b/sajt/search_guest.html
@@ -8,13 +8,13 @@
 		<div class="flex-container-header" height="50" width="100%">
 		<div align="left"><a href="index_guest.html"><img src="neural_beats_small.png"></a></div>
 		<div><form><input type="text" name="query"><button onclick="window.open ('search_guest.html','_self',false);" type="button">Search</button></form></div>
-		<div>Dobrodošli na sajt Neural Beats.    <a href="registration.html">Registracija</a>         <form><input type="text" name="login"><input type="text" name="password"><button onclick="window.open ('search.html','_self',false);" type="button">Login</button></form></div>
+		<div>Dobrodošli na sajt Neural Beats.    <a href="registration.html">Registracija</a>         <form><input type="text" name="login"><input type="password" name="password"><button onclick="window.open ('search.html','_self',false);" type="button">Login</button></form></div>
 		</div>
 
 		<div class="flex-container-main">
-			<div><a href="#">Neki trek 1</a> <br/> Opis treka</div>
-			<div><a href="#">Neki trek 2</a> <br/> Opis treka</div>
-			<div><a href="#">Neki trek 3</a> <br/> Opis treka</div>
+			<div><a href="lista_muzike.html">Neki trek 1</a> <br/> Opis treka</div>
+			<div><a href="lista_muzike.html">Neki trek 2</a> <br/> Opis treka</div>
+			<div><a href="lista_muzike.html">Neki trek 3</a> <br/> Opis treka</div>
 		</div>
 		
 			
